[package]
name = "sea-streamer-benchmark"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 The stream processing toolkit for Rust"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
rust-version = "1.60"

[dependencies]

[features]
default = ["runtime-tokio"]
runtime-tokio = ["tokio", "sea-streamer/runtime-tokio"]
runtime-async-std = ["async-std", "sea-streamer/runtime-async-std"]
