[package]
name = "sea-streamer-kafka"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Kafka / Redpanda Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-kafka"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "kafka", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]

[features]
test = ["anyhow", "async-std?/attributes", "tokio?/full", "env_logger"]
executables = ["anyhow", "env_logger", "clap", "runtime-tokio", "tokio/full"]
runtime-async-std = ["async-std", "sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["tokio", "rdkafka/tokio", "sea-streamer-runtime/runtime-tokio"]
# passthru of rdkafka features
libz = ["rdkafka/libz"]
libz-static = ["rdkafka/libz-static"]
ssl = ["rdkafka/ssl"]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]

[[bin]]
name = "consumer"
path = "src/bin/consumer.rs"
required-features = ["executables"]

[[bin]]
name = "producer"
path = "src/bin/producer.rs"
required-features = ["executables"]
