[package]
name = "sea-streamer-stdio"
version = "0.5.0"
authors = ["Chris Tsang <chris.2y3@outlook.com>"]
edition = "2021"
description = "🌊 SeaStreamer Standard I/O Backend"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/sea-streamer-stdio"
repository = "https://github.com/SeaQL/sea-streamer"
categories = ["concurrency"]
keywords = ["async", "stream", "stream-processing"]
rust-version = "1.60"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]

[features]
default = []
test = ["anyhow", "tokio/full", "env_logger", "sea-streamer-runtime/runtime-tokio"]
executables = ["anyhow", "tokio/full", "env_logger", "clap", "serde_json", "sea-streamer-types/json", "sea-streamer-runtime/runtime-tokio"]
runtime-async-std = ["sea-streamer-runtime/runtime-async-std"]
runtime-tokio = ["sea-streamer-runtime/runtime-tokio"]

[[bin]]
name = "clock"
path = "src/bin/clock.rs"
required-features = ["executables"]

[[bin]]
name = "complex"
path = "src/bin/complex.rs"
required-features = ["executables"]

[[bin]]
name = "relay"
path = "src/bin/relay.rs"
required-features = ["executables"]
